--- a/better-dark-age.css
+++ b/better-dark-age.css
@@ -4,6 +4,15 @@
 /*---------------------------------------------------------------------------*/
 /* MAIN BODY AND BLOCK COLORS */
 
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: var(--background);
+        color: white;
+    }
+}
+
+
 .roam-body-main,
 body {
   background-color: var(--background) !important;
